took out png, made buttons a globalButton class, fixed all colors, fixed spacing, no longer changes with light/dark mode

--- a/mp-labs/src/app/globals.css
+++ b/mp-labs/src/app/globals.css
@@ -48,7 +48,7 @@ body {
 .calendar {
   height: 100vh;
   width: 100%;
-  background-color: #c5e7f5;
+  background-color: #e9f8eb;
   overflow: hidden;
   padding: 35px 50px 0px 50px;
   margin-left: auto;
@@ -94,7 +94,7 @@ body {
 .calendar-week-days button {
   display: grid;
   place-items: center;
-  color: #6D67CF;
+  color: #3a554c;
   height: 50px;
   cursor: pointer;
 }
@@ -280,9 +280,10 @@ body {
 .assignment {
   height: 100vh;
   width: auto;
-  background-color: #c6cccb;
+  background-color: #e9f8eb;
   overflow: hidden;
   padding: 20px 10px 10px 20px;
+  color: #3a554c;
 }
 
 @keyframes to-top {
@@ -456,12 +457,12 @@ body .dribbble {
   line-height: 50px;
   font-weight: bold;
   text-decoration: none;
-  background: #000000;
+  background: #a2c9b8;
   text-align: center;
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 1px;
-  border: 3px solid hsl(0, 0%, 100%);
+  border: 3px solid #a2c9b8;
   transition: all .35s;
   cursor: pointer;
 }
@@ -478,7 +479,7 @@ body .dribbble {
   position: absolute;
   transform: rotate(45deg);
   right: 0;
-  top: 0;
+  top: -4;
   z-index: 0;
   transition: all .35s;
 }
@@ -489,26 +490,46 @@ body .dribbble {
   top: calc(50% - 15px);
   left: calc(50% - 15px);
   transform: rotate(-45deg);
-  fill: #000000;
   transition: all .35s;
 }
 
 .next-week-details:hover{
   width: 200px;
-  border: 3px solid #000000;
+  border: 3px solid #a2c9b8;
   background: transparent;
   color: #000000;
 }
 
 .next-week-details:hover .next-week-arrow{
-  border: 3px solid #000000;
+  border: 3px solid #a2c9b8;
   right: -25%;
 }
+
+.globalButton {
+  background-color: #a2c9b8;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.globalButton:hover {
+  cursor: pointer;
+  color: #3a554c;
+  transform: scale(1.1);
+  transition: all .2s ease-in-out;
+}
+
+.modalClass {
+  background-color: #a2c9b8;
+  color: #3a554c;
+}
+
 .navbar {
   display: flex;
   gap: 1rem;
   padding: 0.5rem;
-  background: #bdd1cc;
+  background: #a2c9b8
+
+  ;
   position: relative;
   align-items: center;
 }
